# Academic-Agentic-GraphRAG

./: .gitignore  Makefile  README.md  pyproject.toml
config/prompts/: system.md  system.txt
config/system_prompts/: claude-sonnet-4-5.md  gpt-4.1.md
cypher/setup/: create-constraints.cypher  create-fulltext-indexes.cypher  create-indexes.cypher  create-numeric-indexes.cypher
scripts/: create-indexes.sh  setup-files.sh
src/neo4j_parser/: enricher.py  export.py  main.py  parser.py
src/parser/: export.py  main.py  parser.py
src/rag/: agent.py  driver.py
src/rag/agent/: agent.py
src/rag/system_messages/: react_graph_rag.txt
src/rag/tools/: arithmetic.py  author_tools.py  citation_tools.py  graph.py  method_tools.py  paper_tools.py  search.py  search_tools.py  shared_models.py  traversal.py
src/ui/: api_pricing.json  chat.py  main.py  stream_handler.py  styles.css  util.py
