[project]
name = "neo4j-graph-rag"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "neo4j>=6.0.2",
    "pandas>=2.3.3",
    "rdflib>=7.2.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
