[project]
name = "neo4j-graph-rag"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "isort>=6.1.0",
    "langchain-anthropic>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=0.3.34",
    "langgraph>=0.6.8",
    "matplotlib>=3.10.6",
    "neo4j>=6.0.2",
    "pandas>=2.3.3",
    "pydantic>=2.11.10",
    "rdflib>=7.2.1",
    "sparqlwrapper>=2.0.0",
    "streamlit>=1.50.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["neo4j_parser*", "rag*", "ui*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
